--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iview-admin",
+  "name": "tvaf_admin",
   "version": "2.0.0",
   "author": "Lison<lison.modern@gmail.com>",
   "private": false,
@@ -12,35 +12,35 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "clipboard": "^2.0.0",
-    "codemirror": "^5.40.2",
+    "clipboard": "^2.0.4",
+    "codemirror": "^5.42.0",
     "countup": "^1.8.2",
-    "cropperjs": "^1.4.1",
+    "cropperjs": "^1.4.3",
     "echarts": "^4.0.4",
     "html2canvas": "^1.0.0-alpha.12",
-    "iview": "^3.1.3",
+    "iview": "^3.1.5",
     "iview-area": "^1.6.0",
     "js-cookie": "^2.2.0",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
     "vue": "^2.5.17",
     "vue-i18n": "^7.8.1",
-    "vue-router": "^3.0.1",
-    "vuedraggable": "^2.16.0",
+    "vue-router": "^3.0.2",
+    "vuedraggable": "^2.17.0",
     "vuex": "^3.0.1",
     "wangeditor": "^3.1.1",
     "xlsx": "^0.13.5"
   },
   "devDependencies": {
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-plugin-unit-mocha": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
-    "@vue/eslint-config-standard": "^3.0.4",
-    "@vue/test-utils": "^1.0.0-beta.25",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@vue/cli-plugin-babel": "^3.2.0",
+    "@vue/cli-plugin-eslint": "^3.2.1",
+    "@vue/cli-plugin-unit-mocha": "^3.2.0",
+    "@vue/cli-service": "^3.2.0",
+    "@vue/eslint-config-standard": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.26",
     "chai": "^4.2.0",
-    "eslint-plugin-cypress": "^2.0.1",
+    "eslint-plugin-cypress": "^2.1.2",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "lint-staged": "^6.0.0",
